ejabberd (2.0.1-1) unstable; urgency=low

  * New upstream bugfix release.
  * Refreshed patches, removed those which were included into upstream.
  * Fixed debian/watch to cover current release version (with _2 suffix).
  * Added _2 suffix to get-orig-source target in debian/rules.
  * Fixed mod_ctlextra to work with ejabberd 2.0.1 (changed session record
    definition).
  * Added new ejabberdctl commands (both new in 2.0.1 and in mod_ctlextra)
    to ejabberdctl manual page.

 -- Sergei Golovan <sgolovan@debian.org>  Sat, 24 May 2008 00:37:21 +0400

ejabberd (2.0.0-7) unstable; urgency=low

  [ Sergei Golovan ]
  * Installed eldap.hrl header. It is necessary to build some external modules
    for ejabberd.
  * Moved headers which are in subdirectories of src directory to
    corresponding subdirectory of /usr/lib/ejabberd/include/ as they are
    usually included with subdirectory prepended.
  * Included a patch which adds LDAPS support and added {ldap_encrypt} and
    {ldap_port} example options to ejabberd config file (closes: #477918).
  * Added an additional info on how to use ejabberd headers to README.Debian.
  * Changed section in doc-base registration file to Network/Communication.
  * Don't use HOSTNAME variable in postinstall and debconf config scripts to
    prevent confusion with the same bash standard environment variable.
  * Removed empty preinstall maintainer script.
  * Fixed minus signs in ejabberd and ejabberdctl manual pages.
  * Updated Russian debconf templates translation.

  [ Torsten Werner ]
  * Updated German debconf templates translation.
  * Update Vcs headers in debian/control.

 -- Sergei Golovan <sgolovan@debian.org>  Sat, 17 May 2008 23:30:17 +0400

ejabberd (2.0.0-6) unstable; urgency=low

  * Replaced a patch for proxy65 module with nicer one (thanks to Evgeniy
    Khramtsov).
  * Added a patch for S2S module to make STARTTLS working with Erlang R12B.
  * Added a patch by upstream fixes crash when browsing the Update page in